feat: Implement agent system using Microsoft Agent Framework (MAF)
BREAKING CHANGE: Replaced Azure AI Foundry connected agents with Microsoft Agent Framework

- Update dependencies: Replace azure-ai-projects with agent-framework
- Implement 7 specialized agents using MAF ChatAgent:
  * PreprocessingAgent: DICOM parsing and image preprocessing
  * PromptGeneratorAgent: Modality-specific prompt generation
  * MedImageParseAgent: API inference orchestration
  * ValidationAgent: Quality assurance and validation
  * PostProcessingAgent: Mask refinement and measurements
  * ReportGeneratorAgent: Clinical report generation
  * IntegrationAgent: PACS/EHR/Azure Storage integration

- Create HealthcareOrchestrator using WorkflowBuilder:
  * Sequential workflow coordination
  * Streaming and standard processing modes
  * Batch processing support
  * Async context manager pattern

- Update configuration for MAF:
  * Azure OpenAI endpoint configuration
  * Azure CLI authentication support
  * Remove Azure AI Foundry project dependencies

- Add example scripts:
  * basic_usage.py: Single image processing demo
  * batch_processing.py: Multiple image processing demo
  * examples/README.md: Comprehensive usage documentation

- Update documentation:
  * README.md: Reflect MAF implementation
  * .env.example: MAF-specific environment variables
  * Remove Azure AI Foundry references

All agents use async/await patterns with proper resource management.
Workflow orchestration leverages MAF's SequentialBuilder for reliable
multi-agent coordination.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "healthcare-agent-orchestrator"
 version = "0.1.0"
-description = "Healthcare Agent Orchestrator for MedImageParse with Azure AI Foundry"
+description = "Healthcare Agent Orchestrator for MedImageParse with Microsoft Agent Framework"
 authors = [
     {name = "Arturo Quiroga", email = "arturo.quiroga@microsoft.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "MIT"}
-keywords = ["healthcare", "medical-imaging", "ai-agents", "azure", "medimageparse"]
+keywords = ["healthcare", "medical-imaging", "ai-agents", "azure", "medimageparse", "maf"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Healthcare Industry",
@@ -22,17 +22,28 @@ classifiers = [
 ]
 
 dependencies = [
-    "azure-ai-projects>=1.0.0",
+    # Microsoft Agent Framework
+    "agent-framework>=0.1.0",
     "azure-identity>=1.15.0",
-    "azure-ai-ml>=1.14.0",
-    "azure-storage-blob>=12.19.0",
-    "azure-ai-inference>=1.0.0b4",
+    
+    # Medical Imaging
     "pydicom>=2.4.4",
     "pillow>=10.2.0",
     "numpy>=1.26.4",
+    
+    # Azure Storage
+    "azure-storage-blob>=12.19.0",
+    
+    # Configuration and validation
     "python-dotenv>=1.0.1",
     "pydantic>=2.6.1",
     "pydantic-settings>=2.1.0",
+    
+    # HTTP clients
+    "httpx>=0.27.0",
+    "aiohttp>=3.9.0",
+    
+    # OpenTelemetry for observability
     "opentelemetry-api>=1.22.0",
     "opentelemetry-sdk>=1.22.0",
     "opentelemetry-instrumentation>=0.43b0",
