--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-# Azure AI Foundry Configuration
-AZURE_AI_PROJECT_ENDPOINT=https://your-project.services.ai.azure.com/api/projects/your-project-id
-AZURE_SUBSCRIPTION_ID=your-subscription-id
-AZURE_RESOURCE_GROUP=your-resource-group
-MODEL_DEPLOYMENT_NAME=gpt-4o
+# Microsoft Agent Framework Configuration
+# Azure OpenAI configuration for MAF agents
+AZURE_OPENAI_ENDPOINT=https://your-openai-resource.openai.azure.com
+AZURE_OPENAI_API_KEY=your-api-key-here
+AZURE_OPENAI_DEPLOYMENT=gpt-4o
+AZURE_OPENAI_API_VERSION=2024-08-01-preview
+USE_AZURE_CLI_AUTH=true
 
 # MedImageParse Configuration
 MEDIMAGEPARSE_ENDPOINT=https://your-medimageparse-endpoint.inference.ml.azure.com
