--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "healthcare-agent-orchestrator"
+name = "maf-medimageparse-orchestrator"
 version = "0.1.0"
 description = "Healthcare Agent Orchestrator for MedImageParse with Microsoft Agent Framework"
 authors = [
@@ -23,7 +23,7 @@ classifiers = [
 
 dependencies = [
     # Microsoft Agent Framework
-    "agent-framework>=0.1.0",
+    "agent-framework>=1.0.0b251007",
     "azure-identity>=1.15.0",
     
     # Medical Imaging
@@ -62,10 +62,10 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/Arturo-Quiroga-MSFT/healthcare-agent-orchestrator"
-Repository = "https://github.com/Arturo-Quiroga-MSFT/healthcare-agent-orchestrator"
-Documentation = "https://github.com/Arturo-Quiroga-MSFT/healthcare-agent-orchestrator/blob/main/README.md"
-Issues = "https://github.com/Arturo-Quiroga-MSFT/healthcare-agent-orchestrator/issues"
+Homepage = "https://github.com/Arturo-Quiroga-MSFT/MAF-MedImageParse-orchestrator"
+Repository = "https://github.com/Arturo-Quiroga-MSFT/MAF-MedImageParse-orchestrator"
+Documentation = "https://github.com/Arturo-Quiroga-MSFT/MAF-MedImageParse-orchestrator/blob/main/README.md"
+Issues = "https://github.com/Arturo-Quiroga-MSFT/MAF-MedImageParse-orchestrator/issues"
 
 [build-system]
 requires = ["setuptools>=68.0", "wheel"]
